ace (5.6.3-6) unstable; urgency=low

  * Remove obsolete maintainers:
    - Konstantinos Margaritis <markos@debian.org>
    - Brian Nelson <pyro@debian.org>
    Closes: #521487.
  * Bump Standards-Version: to 3.8.3.
  * Remove erroneous #define ACE_SCANDIR_CMP_USES_CONST_VOIDPTR in config.h;
    causing diagnostics to FTBFS. Closes: #552899.
  * Remove extra ACLOCAL_AMFLAGS from already existing Makefile.am; causing
    recent aclocal to abort. Thanks to Pau Garcia i Quiles for the patch.
    Closes: #518735.
  * Add README.source.
  * Add new patches:
    - Remove duplicate files from .mpc files so that Makefile.am files do
      not have duplicates 
    - Run autoupdate and autoreconf in the ACE and TAO directories in order
      to update from libtool 1.5 (what upstream uses) to libtool 2.2

 -- Thomas Girard <thomas.g.girard@free.fr>  Wed, 11 Nov 2009 21:06:51 +0100

ace (5.6.3-5) unstable; urgency=low

  * Do not ship MPC config files in both mpc-ace and libace-dev packages;
    they're meant to be only in mpc-ace. Make mpc-ace Replaces: the bogus
    previous upload. Closes: #484718.
  * Bump Standards-Version: to 3.8.0.

 -- Thomas Girard <thomas.g.girard@free.fr>  Fri, 13 Jun 2008 21:52:28 +0000

ace (5.6.3-4) unstable; urgency=low

  * Add the following missing programs to libace-dev:
    o $ACE_ROOT/bin/generate_export_file.pl
    o $ACE_ROOT/bin/split-cpp
    o $ACE_ROOT/bin/g++dep
    o $ACE_ROOT/bin/add_rel_link.sh
  * Move DependencyGenerator from mpc-ace to libace-dev.
  * New patch, 22-remove-Ge-doc.dpatch, to remove documentation for
    tao_idl -Ge flag that no longer works. Thanks to Pascal Giard for
    reporting this.
  * Remove PACKAGE_* definitions from /usr/include/ace/config.h. Thanks to
    Pascal Giard for reporting this.
  * Remove pre-etch Conflicts: and Replaces: information.
  * Add missing headers found with cmp-installation.sh. Closes: #481088.

 -- Thomas Girard <thomas.g.girard@free.fr>  Sat, 24 May 2008 15:47:01 +0000
