@@ -1,5 +1,6 @@
 ace (5.6.3-6) unstable; urgency=low
 
+  [ Thomas Girard ]
   * Remove obsolete maintainers:
     - Konstantinos Margaritis <markos@debian.org>
     - Brian Nelson <pyro@debian.org>
@@ -11,6 +12,9 @@ ace (5.6.3-6) unstable; urgency=low
     recent aclocal to abort. Thanks to Pau Garcia i Quiles for the patch.
     Closes: #518735.
   * Add README.source.
+  * Add Pau Garcia i Quiles to the list of maintainers.
+
+  [ Pau Garcia i Quiles ]
   * Add new patches:
     - Remove duplicate files from .mpc files so that Makefile.am files do
       not have duplicates 
